--- a/src/app/Views/card-titulo/card-titulo.component.html
+++ b/src/app/Views/card-titulo/card-titulo.component.html
@@ -5,7 +5,8 @@
             <br>
             Apaixonado por criar interfaces de usuário elegantes e intuitivas.
         </p>
-        <button><a href="#">Conheça mais sobre mim.</a></button>
+      <button class="button"><a href="https://wa.me/5521980083604">
+        <img class ="wpp" src="https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo-whatsapp-64.png"></a><a href="https://wa.me/5521980083604">Entre em contato</a></button>
     </div>
     <div class="card-menu_image">
         <img src="https://avatars.githubusercontent.com/u/106537223?v=4">
