--- a/src/app/Views/home/home.component.html
+++ b/src/app/Views/home/home.component.html
@@ -1,6 +1,9 @@
 <header>
+   <a href="https://wa.me/5521980083604"><img class ="wpp" src="https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo-whatsapp-64.png"></a> 
     <app-card-titulo></app-card-titulo>
 </header>
 <section>
     <app-sobre-mim></app-sobre-mim>
+    <app-card-skills></app-card-skills>
+    <app-portifolio></app-portifolio>
 </section>
