--- a/src/app/Views/portifolio/portifolio.component.html
+++ b/src/app/Views/portifolio/portifolio.component.html
@@ -7,11 +7,12 @@
         <div style="background-image: url('{{projeto.Imagem}}');"class="Projetos_conteudo" *ngFor="let projeto of projetos">
             <div  class="projeto">
 
-                <div class="conteudo ">
-                    <a href="{{projeto.Link}}">
+                <div class="conteudo">
+                    
                         <h1 class="titulo">{{projeto.Titulo}}</h1>
+                        <button class="button"><a href="{{projeto.Link}}">ver mais</a></button>
                         <p class="descrição">< {{projeto.Descricao}} /></p>
-                    </a>
+                   
                 </div>
 
             </div>
