--- a/src/app/Views/card-titulo/card-titulo.component.css
+++ b/src/app/Views/card-titulo/card-titulo.component.css
@@ -36,6 +36,10 @@
     border-radius: 10px;
     margin-left: 210px;
 }
+.card-menu_conteudo  > button:hover{
+   position:relative;
+   top:5px;
+}
 .button{
     display:flex;
     align-items: center;
