--- a/src/app/Views/sobre-mim/sobre-mim.component.css
+++ b/src/app/Views/sobre-mim/sobre-mim.component.css
@@ -1,15 +1,16 @@
-.sobre-mim_container{
+.sobre-mim_container {
     margin-top: 40px;
     width: 99%;
     height: 500px;
-    
+
     display: flex;
     flex-direction: row;
     align-items: center;
 }
-.sobre-mim_container > span:hover{
 
-    border:1px solid white;
+.sobre-mim_container>span:hover {
+
+    border: 1px solid white;
     margin-left: 210px;
     border-radius: 200px;
     font-size: 6em;
@@ -19,8 +20,9 @@
     color: #ff5757;
 
 }
-.sobre-mim_container > span{
-    
+
+.sobre-mim_container>span {
+
 
     margin-left: 210px;
 
@@ -30,10 +32,12 @@
 
     color: #ffffff;
 }
-.sobre-mim_conteudo{
+
+.sobre-mim_conteudo {
     width: 40%;
 }
-.sobre-mim_conteudo > h1{
+
+.sobre-mim_conteudo>h1 {
     margin-top: 40px;
     margin-left: 210px;
 
@@ -45,12 +49,44 @@
     width: 200px;
     padding-bottom: 20px;
 }
-.sobre-mim_conteudo > p {
+
+.sobre-mim_conteudo>p {
     text-decoration: justify;
     width: 100%;
-    color:rgb(163, 156, 156);
+    color: rgb(163, 156, 156);
     font-size: 1.2em;
     font-family: 'PT Sans';
     margin-bottom: 40px;
-    margin-left: 210px;;
+    margin-left: 210px;
+    ;
+}
+
+/*Deixando responsivo*/
+@media (min-width: 200px) and (max-width:650px){
+
+    .sobre-mim_container {
+        margin-top: 50px;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .sobre-mim_container>span {
+        display: none;
+    }
+
+    .sobre-mim_conteudo {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .sobre-mim_conteudo > h1{
+        font-size: 1.5em;
+    }
+    .sobre-mim_conteudo>p {
+        width: 70%;
+        font-size: 1em;
+        
+    }
 }
