--- a/src/app/Views/card-skills/card-skills.component.css
+++ b/src/app/Views/card-skills/card-skills.component.css
@@ -67,4 +67,31 @@
     width: 60px;
     height: 60px;
 }
+/*Resposividade*/
+@media (min-width: 200px) and (max-width:650px) { 
+
+    .card-skills_container{
+        justify-content: center;
+        height: 1200px;
+    }
+    .card-skills_container > h1{
+        text-align: center;
+        font-size: 1.5em;
+        width: 200px;
+    }
+    .card-skills_conteudo{
+        width: 100%;
+        margin-left: 100px;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .card-skill{
+        width: 90%;
+        margin-bottom: 50px;
+        height:500px
+    }
+    .card-habilidade > p{
+        font-size: 1em;
+    }
+ }
 
