--- a/src/app/Views/sobre-mim/sobre-mim.component.css
+++ b/src/app/Views/sobre-mim/sobre-mim.component.css
@@ -69,6 +69,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        width: 100%;
     }
 
     .sobre-mim_container>span {
