--- a/src/app/Views/card-skills/card-skills.component.css
+++ b/src/app/Views/card-skills/card-skills.component.css
@@ -71,24 +71,25 @@
 @media (min-width: 200px) and (max-width:650px) { 
 
     .card-skills_container{
+        width: 100%;
         justify-content: center;
         height: 1200px;
     }
     .card-skills_container > h1{
-        text-align: center;
+        margin-left: 60px;
         font-size: 1.5em;
         width: 200px;
     }
     .card-skills_conteudo{
         width: 100%;
-        margin-left: 100px;
         flex-direction: column;
         justify-content: center;
     }
     .card-skill{
-        width: 90%;
+        width: 100%;
         margin-bottom: 50px;
-        height:500px
+        height:500px;
+       
     }
     .card-habilidade > p{
         font-size: 1em;
