--- a/src/app/Views/card-titulo/card-titulo.component.css
+++ b/src/app/Views/card-titulo/card-titulo.component.css
@@ -70,14 +70,16 @@
 @media (min-width: 200px) and (max-width:650px) { 
 
     .card-titulo_container{
+        width: 100%;
         margin-top: 20px;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+       
         height: 700px;
         
     }
     .card-menu_conteudo{
+        justify-content: center;
+        align-items: center;
         width: 100%;
         margin-bottom: 50px;
         padding-bottom: 20px;
