--- a/src/app/Views/menu-bar/menu-bar.component.css
+++ b/src/app/Views/menu-bar/menu-bar.component.css
@@ -37,12 +37,10 @@
 
 @media (min-width: 200px) and (max-width:650px) { 
     .menu-bar_container{
-        justify-content: center;
-        align-items: center;
+        width: 100%;
         height: 120px;
         border-bottom: 1px solid #b9b9b9;
-        align-items: flex-start;
-        justify-content: flex-start;
+        
     }
     .menu-bar >nav {
         display: none;
