--- a/src/app/Views/portifolio/portifolio.component.css
+++ b/src/app/Views/portifolio/portifolio.component.css
@@ -2,9 +2,10 @@
     height: 700px;
     width: 99%;
     background-color: #222020;
-    
+
 }
-.portifolio_container > h1{
+
+.portifolio_container>h1 {
     margin-top: 40px;
     margin-left: 210px;
 
@@ -16,23 +17,27 @@
     width: 200px;
     padding-bottom: 20px;
 }
-.cards{
+
+.cards {
     display: flex;
     flex-wrap: wrap;
 }
-.Projetos_conteudo{
+
+.Projetos_conteudo {
     margin-top: 70px;
-    margin-left:180px;
+    margin-left: 180px;
     width: 17%;
     height: 300px;
     border: 3px solid white;
     border-radius: 10px;
 }
+
 .Projetos_conteudo:hover {
     opacity: 0.65;
     transition: 1s;
 }
-.projeto{
+
+.projeto {
     width: 100%;
     height: 100%;
     display: flex;
@@ -42,7 +47,8 @@
     background-color: rgba(0, 0, 0, 0.2);
     transition: 1s;
 }
-.conteudo{
+
+.conteudo {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -55,42 +61,70 @@
     font-size: 1.3em;
     font-family: 'PT sans';
 }
+
 .conteudo:hover .titulo {
     opacity: 1;
-    transform: translateY(-140px); /* Subir 50 pixels */
+    transform: translateY(-140px);
+    /* Subir 50 pixels */
     transition: transform 0.5s ease-in-out;
 
-  }
-  
-  .conteudo:hover .descrição {
+}
+
+.conteudo:hover .descrição {
     opacity: 1;
-    transform: translateY(140px); /* Subir 50 pixels */
+    transform: translateY(140px);
+    /* Subir 50 pixels */
     transition: transform 0.5s ease-in-out;
-   
-  }
-  .conteudo:hover .button {
+
+}
+
+.conteudo:hover .button {
     opacity: 1;
     transition: 1s;
-   
-  }
+
+}
+
 .descrição {
     opacity: 0;
     text-align: center;
-    color:white;
+    color: white;
     font-size: 1em;
     font-family: 'PT sans';
 }
-.button{
+
+.button {
     width: 100px;
     box-shadow: 3px 3px 5px black;
     height: 40px;
     opacity: 0;
-    border:1px solid #f7f5f5;
+    border: 1px solid #f7f5f5;
     border-radius: 10px;
     background-color: #ff5757;
 }
 
-.button>a{
- color: black;
+.button>a {
+    color: black;
 
+}
+
+@media (min-width: 200px) and (max-width:650px) {
+
+    .portifolio_container {
+        width: 100%;
+        height: 1500px;
+    }
+
+    .portifolio_container>h1 {
+        text-align: center;
+        margin-left: 60px;
+        width: 200px;
+    }
+    .cards {
+        flex-direction: column;
+      
+    }
+    .Projetos_conteudo{
+        margin-left: 60px;
+        width: 100%;
+    }
 }
