--- a/src/app/Views/card-servicos/card-servicos.component.css
+++ b/src/app/Views/card-servicos/card-servicos.component.css
@@ -60,17 +60,22 @@
 .card-servicos_container{
     width: 100%;
     height: 1200px;
+    border: 1px solid white;
 }
     .card-servicos_titulo{
+        margin-left: 60px;
         font-size: 1.1em;
         width: 300px;
+        text-align: start;
     }
     .card-servicos{
+        border: 1px solid white;
         flex-direction: column;
-        margin-left: 60px;
+        margin-left: 10px;
     }
     .card-servicos_interface{
-        width: 100%;
+        width: 80%;
+        margin-left: 5px;
         
     }
     .card-servicos_interface > h1{
