--- a/src/app/Views/card-skills/card-skills.component.css
+++ b/src/app/Views/card-skills/card-skills.component.css
@@ -71,14 +71,20 @@
 @media (min-width: 200px) and (max-width:650px) { 
 
     .card-skills_container{
+        border: 1px solid white;
         width: 100%;
         justify-content: center;
-        height: 1200px;
+        height: 1300px;
     }
     .card-skills_container > h1{
         margin-left: 60px;
         font-size: 1.5em;
         width: 200px;
+    }
+    .card-skills {
+        border: 1px solid white;
+        margin-left: 20px;
+
     }
     .card-skills_conteudo{
         width: 100%;
@@ -86,7 +92,7 @@
         justify-content: center;
     }
     .card-skill{
-        width: 100%;
+        width: 80%;
         margin-bottom: 50px;
         height:500px;
        
