--- a/src/app/Views/menu-bar/menu-bar.component.css
+++ b/src/app/Views/menu-bar/menu-bar.component.css
@@ -1,53 +1,60 @@
-.menu-bar_container{
+.menu-bar_container {
     width: 100%;
     background-color: #222020;
     border-bottom: 1px solid #b9b9b9;
 }
-.menu-bar{
+
+.menu-bar {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 100px;
 }
-.menu-bar_logo{
+
+.menu-bar_logo {
     width: 200px;
+    height: 200px;
+    background-image:url('src\assets\MtcLogo.png');
 }
-.menu-bar > nav {
+
+.menu-bar>nav {
     display: flex;
 }
-.menu-bar > nav > a{
+
+.menu-bar>nav>a {
     display: flex;
     align-items: center;
     margin-left: 25px;
     color: white;
 
-    font-family:'PT Sans', sans-serif; 
-    font-size:1.1em;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.1em;
 }
-.menu-bar > nav > a:HOVER{
-   position: relative;
-   top: 3px;
-   background-color: rgba(255, 235, 205, 0.445);
+
+.menu-bar>nav>a:HOVER {
+    position: relative;
+    top: 3px;
+    background-color: rgba(255, 235, 205, 0.445);
 }
-.menu-bar > nav > a > img{
- width: 40px;
-}
+
 
 /*Deixando o site resposivo*/
 
-@media (min-width: 200px) and (max-width:650px) { 
-    .menu-bar_container{
+@media (min-width: 200px) and (max-width:650px) {
+    .menu-bar_container {
         width: 100%;
         height: 120px;
-        border-bottom: 1px solid #b9b9b9;
-        
+        border: 1px solid #b9b9b9;
+    
     }
-    .menu-bar >nav {
+
+    .menu-bar>nav {
         display: none;
     }
-    .menu-bar_logo{
+
+    .menu-bar_logo {
+        margin-right: 200px;
         width: 200px;
-        margin-left: 170px;
     }
-    
- }
+
+}
