--- a/src/app/Views/menu-bar/menu-bar.component.html
+++ b/src/app/Views/menu-bar/menu-bar.component.html
@@ -2,15 +2,17 @@
 
     <div class="menu-bar">
 
-        <img src=".\assets\MtcLogo.png" alt="Logo" class="menu-bar_logo" />
+
+        <div class="menu-bar_logo">
+        </div>
         <nav>
             <a href="">Home</a>
             <a href="">Sobre mim</a>
             <a href="">Skills</a>
             <a href="">Portifólio</a>
             <a href="">Contato</a>
-            <a href="https://linkedin.com/in/matheuscavalcanti-dev/"><img src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-64.png" alt="Linkedin"></a>
-            <a href="https://github.com/MTC00747"><img src="https://cdn3.iconfinder.com/data/icons/social-rounded-2/72/GitHub-64.png"  alt="Github"></a>
+            <a href=""><img src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-64.png" alt="Linkedin"></a>
+            <a href=""><img src="https://cdn3.iconfinder.com/data/icons/social-rounded-2/72/GitHub-64.png"  alt="Github"></a>
         </nav>
     </div>
 </div>
