Subindo mais um projeto!

--- a/src/app/Views/sobre-mim/sobre-mim.component.html
+++ b/src/app/Views/sobre-mim/sobre-mim.component.html
@@ -4,10 +4,9 @@
 
     <div class="sobre-mim_conteudo">
         <h1> < Sobre mim / > </h1>
-        <p>Me chamo Matheus, sou desenvolvedor web.
-         Sempre fui apaixonado por técnologia, em especial desenvolvimento web, tive meu primeiro contato com a programação a 9 anos atrás.  
-         Realizei o curso programador fullstack do SENAI, onde pude aprender sobre diversas coisas, tais como prototipação de sites, métodolgias ágeis entre outras coisas ao qual destaco em minhas skills. 
-         E desde então venho trabalhando como desenvolvedor web. Sinta-se a vontade para explorar o meu site e encontrar os mais diversos tipos de projetos,desde o front-end até o back-end.
+        <p>Sou Matheus, um desenvolvedor web apaixonado por tecnologia. Tenho 9 anos de experiência na área e recentemente concluí o curso de programador fullstack do SENAI. No meu portfólio, você encontrará uma variedade de projetos em front-end e back-end. 
+            Estou pronto para novos desafios e oportunidades de desenvolvimento.
+             Vamos trabalhar juntos!
         </p>
     </div>
     
