--- a/src/app/Views/menu-bar/menu-bar.component.html
+++ b/src/app/Views/menu-bar/menu-bar.component.html
@@ -11,22 +11,31 @@
             <a href="">Skills</a>
             <a href="">Portifólio</a>
             <a href="">Contato</a>
-            <a href=""><img src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-64.png" alt="Linkedin"></a>
-            <a href=""><img src="https://cdn3.iconfinder.com/data/icons/social-rounded-2/72/GitHub-64.png"  alt="Github"></a> 
+            <a href=""><img
+                    src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-64.png"
+                    alt="Linkedin"></a>
+            <a href=""><img src="https://cdn3.iconfinder.com/data/icons/social-rounded-2/72/GitHub-64.png"
+                    alt="Github"></a>
         </nav>
-        <button (click)="abrirMenu()" class="menuBurguer " >
-            <img src="https://img.icons8.com/?size=1x&id=eofQ1g5BaAx6&format=png" alt="Menu">
-            
-            <div class="menu-bar_coluna  animate__animated animate__fadeInRight "  *ngIf="menuAberto" >
+
+        <button (click)="abrirMenu()" class="menuBurguer ">
+            <img class="img-menu" src="/assets/menu.png" alt="Menu">
+
+            <div class="menu-bar_coluna  animate__animated animate__fadeInRight " *ngIf="menuAberto">
+
                 <nav>
                     <a href="">Home</a>
                     <a href="">Sobre mim</a>
                     <a href="">Skills</a>
                     <a href="">Portifólio</a>
                     <a href="">Contato</a>
-                    <a href=""><img src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-64.png" alt="Linkedin"></a>
-                    <a href=""><img src="https://cdn3.iconfinder.com/data/icons/social-rounded-2/72/GitHub-64.png"  alt="Github"></a> 
+                    <a href=""><img
+                            src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-64.png"
+                            alt="Linkedin"></a>
+                    <a href=""><img src="https://cdn3.iconfinder.com/data/icons/social-rounded-2/72/GitHub-64.png"
+                            alt="Github"></a>
                 </nav>
+
             </div>
         </button>
     </div>
