--- a/src/app/Views/card-servicos/card-servicos.component.css
+++ b/src/app/Views/card-servicos/card-servicos.component.css
@@ -59,7 +59,7 @@
 }
 
 /*Responsividade*/
-@media (min-width: 200px) and (max-width:550px) {
+@media (min-width: 200px) and (max-width:480px) {
     .card-servicos_container {
         width: 100%;
         height: 1200px;
@@ -67,10 +67,10 @@
     }
 
     .card-servicos_titulo {
-        margin-left: 60px;
+        margin-left: 46px;
         font-size: 1.1em;
-        width: 300px;
-        text-align: start;
+        width: 80%;
+        text-align: center;
     }
 
     .card-servicos {
