--- a/src/app/Views/card-skills/card-skills.component.css
+++ b/src/app/Views/card-skills/card-skills.component.css
@@ -68,17 +68,24 @@
     height: 60px;
 }
 /*Resposividade*/
-@media (min-width: 200px) and (max-width:650px) { 
+@media (min-width: 200px) and (max-width:480px) { 
 
     .card-skills_container{
         width: 100%;
         justify-content: center;
         height: 1300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .card-skills_container > h1{
-        margin-left: 60px;
+        margin-left: 16px;
         font-size: 1.5em;
-        width: 200px;
+        width: 80%;
+        margin-bottom: 50px;
+        text-align: center;
+        
     }
     .card-skills {
     
@@ -92,8 +99,9 @@
     }
     .card-skill{
         width: 80%;
-        margin-bottom: 50px;
         height:500px;
+        margin:auto;
+        margin-bottom: 50px;
        
     }
     .card-habilidade > p{
