--- a/src/app/Views/portifolio/portifolio.component.css
+++ b/src/app/Views/portifolio/portifolio.component.css
@@ -108,24 +108,28 @@
 
 }
 
-@media (min-width: 200px) and (max-width:650px) {
+@media (min-width: 200px) and (max-width:480px) {
 
     .portifolio_container {
         width: 100%;
-        height: 1500px;
+        height: 1900px;
     }
 
     .portifolio_container>h1 {
         text-align: center;
-        margin-left: 60px;
-        width: 200px;
+        margin-left: 50px;
+        width: 80%;
     }
+
     .cards {
         flex-direction: column;
-      
     }
-    .Projetos_conteudo{
-        margin-left: 60px;
+
+    .Projetos_conteudo {
+        margin-left: 87px;
         width: 60%;
+        justify-content: center;
+        align-items: center;
+     
     }
 }
