--- a/src/app/Views/sobre-mim/sobre-mim.component.css
+++ b/src/app/Views/sobre-mim/sobre-mim.component.css
@@ -62,7 +62,7 @@
 }
 
 /*Deixando responsivo*/
-@media (min-width: 200px) and (max-width:650px){
+@media (min-width: 200px) and (max-width:480px){
 
     .sobre-mim_container {
         margin-top: 50px;
@@ -78,12 +78,16 @@
 
     .sobre-mim_conteudo {
         width: 100%;
+     
+        display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         
     }
     .sobre-mim_conteudo > h1{
-        margin-left: 60px;
+        margin-left: 6px;
+        text-align: center;
         font-size: 1.5em;
     }
     .sobre-mim_conteudo>p {
