--- a/src/app/Views/menu-bar/menu-bar.component.html
+++ b/src/app/Views/menu-bar/menu-bar.component.html
@@ -1,10 +1,8 @@
 <div class="menu-bar_container">
 
     <div class="menu-bar">
+        <img class="menu-bar_logo" src="/assets/MtcLogo.png">
 
-
-        <div class="menu-bar_logo">
-        </div>
         <nav>
             <a href="">Home</a>
             <a href="">Sobre mim</a>
